<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".Login.LoginActivity"
    android:fillViewport="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:layout_height="match_parent">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@drawable/logo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/text_view_id"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="35sp"
        android:gravity="center_horizontal"
        android:text="@string/welcome_to_wits_marketplace"
        android:lines="2"
        android:textColor="@color/lightGrey"
        android:textStyle="bold"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:paddingHorizontal="40dp"
        android:textColorHint="@color/yellow"

        >

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/holo_blue_light"
            android:ems="9"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck">

        </EditText>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColorHint="@color/yellow"
        android:orientation="horizontal"
        android:paddingHorizontal="40dp"
        android:paddingTop="5dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/lightGrey"
        >

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="9"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/signupbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_sign_up_here"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal">

        </TextView>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginHorizontal="45dp"
        android:background="@drawable/login_btn"

        android:text="@string/enter_marketplace"
        android:textColor="@color/lightGrey"
        android:textSize="15sp"
        android:textStyle="bold"
        />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>